Fix a layout bug

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -11,7 +11,7 @@ body {
   background: $dark-bg-color;
   margin: 2rem;
   overflow: auto;
-  border: 1px solid #fff;
+  // border: 1px solid #fff;
 
   &::-webkit-scrollbar {
     width: 0;
